updated french version with I2R and links to ticketshop

--- a/fr.html
+++ b/fr.html
@@ -233,11 +233,43 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Cours à venir</h2>
-          <p class="text-muted" style="margin:0px;font-size:1.5em">Avec des applications dans tous les domaines professionels!</i></p>
-          <p class="text-muted">Équilibrant de courtes présentations interactives et des travaux pratiques plus longs, étape par étape, nos cours sont conçus pour répondre à votre niveau et à vos besoins spécifiques, que vous soyez un analyste de données débutant ou avancé. Il y aura plusieurs instructeurs pour s'assurer que personne ne se perd. N'hésitez pas à nous contacter si vous avez des questions et à explorer nos documents ouverts</p><br><br><br>
+          <p class="text-muted" style="margin:0px;font-size:1.5em">Avec des applications dans tous les domaines professionnels!</i></p>
+          <p class="text-muted">En alternant des présentations interactives et des travaux pratiques, étape par étape, nos cours sont conçus pour répondre à votre niveau et à vos besoins spécifiques, que vous soyez un analyste de données débutant ou avancé. Il y aura plusieurs instructeurs pour s'assurer que personne ne se perd. N'hésitez pas à nous contacter si vous avez des questions et à explorer nos documents ouverts</p><br><br><br>
 
         </div>
       </div>
+      
+           <div class="row">
+        <div class="col-lg-12">
+          <ul class="timeline">
+            <li>
+              <div class="timeline-image">
+                <a data-toggle="modal" href="#I2R">
+                  <img class="rounded-circle img-fluid" src="img/courses/0.png" alt="">
+                </a>
+              </div>
+              <div class="timeline-panel">
+                <div class="timeline-heading">
+                  <h4>Introduction à l'analyse de données avec R</h4>
+                  <p class="text-muted" style="margin-bottom:2px;font-size:1.2em">200 CHF @ Lausanne</p>
+                </div>
+                <div class="timeline-body">
+                  <a class="course-link" data-toggle="modal" href="#I2R">
+                  <div class="course-hover">
+                    <div class="course-hover-content">
+                      <i class="fas fa-plus fa-3x"></i>
+                    </div>
+                  </div>
+                  <p class="text-muted">Découvrir la science de données et le champ infini de possibilités qu'elle ouvre. Dans ce cours vous allez essayer le langage de programmation R et avoir un premier aperçu de comment manipuler de fichiers de données, établir des statistiques simples et créer des graphiques en quelques étapes. </p>
+                </div>
+                </a>
+                <div class="timeline-dates">
+                  <a class="date" href="https://etickets.infomaniak.com/shop/Fq4MJqko9w/">Juin 2 | Réserver</a>
+                  <!--<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Réserver</a>-->
+                </div>
+              </div>
+            </li>
+      
       <div class="row">
         <div class="col-lg-12">
           <ul class="timeline">
@@ -264,7 +296,7 @@
                 </a>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Aug 24/25 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Preregister</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'R for Data Science'.">tba | Réserver</a>
                 </div>
               </div>
             </li>
@@ -291,7 +323,7 @@
                 </div>
                 <div class="timeline-dates">
                   <!---<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>--->
-                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'Statistics with R'.">tba | Preregister</a>
+                  <a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for R for Data Science&amp;body=I would like to preregister for the next R Bootcamp 'Statistics with R'.">tba | Réserver</a>
                 </div>
               </div>
             </li>
@@ -312,12 +344,12 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Découvrez comment créer des modèles prédictifs à l'aide de l'apprentissage automatique et de R. Après le cours, vous comprendrez les bases de l'apprentissage automatique et saurez comment appliquer divers algorithmes pour résoudre des problèmes courants de décision et de prévision. </p>
+                  <p class="text-muted">Découvrez comment créer des modèles de prédiction à l'aide de l'apprentissage automatique et de R. Après le cours, vous comprendrez les bases de l'apprentissage automatique et saurez comment appliquer divers algorithmes pour résoudre des problèmes courants de décision et de prévision. </p>
                   </a>
                 </div>
                 <div class="timeline-dates">
                   <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>-->
-			<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for Machine Learning with R&amp;body=I would like to preregister for the next R Bootcamp 'Machine Learning with R'.">tba | Preregister</a>
+			<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for Machine Learning with R&amp;body=I would like to preregister for the next R Bootcamp 'Machine Learning with R'.">tba | Réserver</a>
                 </div>
               </div>
             </li>
@@ -330,7 +362,7 @@
                   </div>
                 </div>
                 <div class="mats" style="margin-top:-7px; > <!--- text-shadow: 0px 0px 20px #82E5BF"--->
-                  Voir<br>matériaux<br>passés!
+                  Voir<br>cours <br>passés!
                 </div>
                 </a>
               </div>
@@ -859,6 +891,121 @@
   COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES
   COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES
   -->
+  <!-- I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R I2R -->
+  <div class="course-modal modal fade" id="I2R" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
+                <h4  style="padding:0px;margin:0px">Introduction à l'analyse de données avec R</h4>
+                <p class="item-intro text-muted">Séance découverte et prise en main du langage de programation R.</p>
+                <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Register</a><br><a class="pre-date">Nov 9/10 | Preregister</a>-->
+                <br><br>
+                <p class="head">Objectifs</p>
+                <p class="text-muted entry">Découvrir la science de données et le champ infini de possibilités qu'elle ouvre. Dans ce cours vous allez essayer le langage de programmation R et avoir un premier aperçu de comment manipuler de fichiers de données, établir des statistiques simples et créer des graphiques en quelques étapes. Une manière différente et puissante de préparer des rapports et aider à la prise de décision sur la base de données factuelles.</p>
+                <p class="head">Pré-requis</p>
+                <p class="text-muted entry">Ce cours ne nécessite pas de connaissance au préalable de programmation ni de statistique. Les participants sont priés d'apporter leur propre ordinateur portable avec accès au réseau wifi ou internet.</p>
+                <p class="head">Details</p>
+                <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem">Durée</td>
+                    <td>Cours de 1/2 journée: Vendredi, 13:00 - 18:00</td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Localisation</td>
+                    <td><a href="https://gothamco.com/locations/lausanne-gare">Gotham </a> Lausanne Gare <a href="https://www.google.com/maps?t=m&hl=en-US&gl=US&q=46%C2%B030%2759.1%22N+6%C2%B037%2758.4%22E+46.516428,+6.632877@46.5164282,6.632876899999999"><i class="fas fa-map-marker-alt"></i></a></td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Classe</td>
+                    <td>Max. 8 participants</td>
+                  </tr>
+                  <tr>
+                    <td class="elem">Price</td>
+                    <td>200 CHF</td>
+                  </tr>
+                </table>
+
+                <p class="head">Dates & Matériaux <font style="font-size:10px">(Juin, 2023)</font></p>
+                <table class="text-muted entry schedule" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <th></th>
+                    <th>Day 1</th>
+                  </tr>
+                  <tr>
+                    <td class="time">13:20</td>
+                    <td>Bienvenue</td>
+                  </tr>
+                  <tr>
+                    <td class="time"></td>
+                    <td>Pourquoi R?</td>
+                  </tr>
+                  <tr>
+                    <td class="time"></td>
+                    <td>R(Studio)</td>
+                  </tr>
+                  <tr>
+                    <td class="time"></td>
+                    <td>Assignations</td>
+                  </tr>
+                  <tr>
+                    <td class="time"></td>
+                    <td>Fonctions</td>
+                  </tr>
+		  <tr>
+                    <td class="time"></td>
+                    <td>Données</td>
+                  </tr>
+		  <tr>
+                    <td class="time"></td>
+                    <td>Analyse</td>
+                  </tr>
+                  <tr>
+                    <td class="time"></td>
+                    <td>Analyse</td>
+                  </tr>
+                  <tr>
+                    <td class="time">17:45</td>
+                    <td>Récapitulation</td>
+                  </tr>
+                </table>
+                <!--<p class="head">Key packages</p>
+                <table class="text-muted entry" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=tidyverse">tidyverse</a></td>
+                    <td>A collection of cutting-edge Data Science packages prominently including <a class="pckg" target="_blank" href="http://cran.r-project.org/package=readr">readr</a>, <a class="pckg" target="_blank" href="http://cran.r-project.org/package=dplyr">dplyr</a>, and <a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a>.</td>
+                  </tr>
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=readr">readr</a></td>
+                    <td>Convenient package for reading in text file formats such as .csv and .txt.</td>
+                  </tr>
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=dplyr">dplyr</a></td>
+                    <td>R's go to data wrangling package for cleaning, organizing, and joining data sets.</td>
+                  </tr>
+                  <tr>
+                    <td class="elem"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=ggplot2">ggplot2</a></td>
+                    <td>Arguably the best visualization package across all programming language, not just R.</td>
+                  </tr>
+                </table>-->
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS R4DS -->
   <div class="course-modal modal fade" id="R4DS" tabindex="-1" role="dialog" aria-hidden="true">
@@ -877,7 +1024,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">R for Data Science</h4>
                 <p class="item-intro text-muted">Learn Data Science with R from the ground up</p>
-                <a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Register</a><br><a class="pre-date">Nov 9/10 | Preregister</a>
+                <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/r-for-data-science-208287#collapsible-heading-anmeldung">Aug 24/25 | Register</a><br><a class="pre-date">Nov 9/10 | Preregister</a>-->
                 <br><br>
                 <p class="head">Learning objective</p>
                 <p class="text-muted entry">This course teaches you the basics of the R language and the Rstudio environment, how to load data from various external files types, including .csv, .excel, .sav, how to clean, organise, and explore data, how to conduct basic statistical analyses and, finally, how to create striking visualisations.</p>
@@ -938,7 +1085,7 @@
                   <tr>
                     <td class="time">1745</td>
                     <td>Wrap-up</td>
-                    <td>Apero</td>
+                    <td>Apéro</td>
                   </tr>
                 </table>
                 <p class="head">Key packages</p>
@@ -989,7 +1136,7 @@
                 <h4  style="padding:0px;margin:0px">Statistics with R</h4>
                 <p class="item-intro text-muted">Learn to make data-driven decisions with R</p>
 
-                <a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>
+                <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/statistics-with-r-233189#collapsible-heading-anmeldung">Sep 7/8 | Register</a>-->
 
                 <br><br>
 
@@ -1109,7 +1256,7 @@
                 <h4  style="padding:0px;margin:0px">Machine Learning with R</h4>
                 <p class="item-intro text-muted">Learn to build predictive algorithms with R</p>
 
-                <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>
+                <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>-->
 
                 <br><br>
 
@@ -1515,7 +1662,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <h2 class="text-uppercase">Matériaux passés</h2>
+                <h2 class="text-uppercase">Matériaux cours précédents</h2>
                 <p class="item-intro text-muted">En suivant la philosophie de R de rendre la documentation ouverte à tous, nous rendons les matériaux des formations disponibles publiquement. Ci-dessous les liens pour nos cours passées.</p>
                 <br>
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
