updated french version with I2R and links to ticketshop

--- a/fr.html
+++ b/fr.html
@@ -242,7 +242,7 @@
            <div class="row">
         <div class="col-lg-12">
           <ul class="timeline">
-            <li>
+            <li class="timeline-inverted">
               <div class="timeline-image">
                 <a data-toggle="modal" href="#I2R">
                   <img class="rounded-circle img-fluid" src="img/courses/0.png" alt="">
