--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_no2_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Früjahr 2023."
     var i2r_no2_font = "lighter"; //lighter
-    var i2r_text = "DE | tba | VorAnmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Früjahr 2023."
+    var i2r_text = "DE | 1. Sept. | VorAnmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Herbst 2023."
     var i2r_font = "bolder"; //lighter
-    var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Früjahr 2023."
+    var expl_text = "DE | 13. & 14. Sept. | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Herbst 2023."
     var expl_font = "bolder";
     var stat_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Statistik mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' im Früjahr 2023."
