--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_no2_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Früjahr 2023."
     var i2r_no2_font = "lighter"; //lighter
-    var i2r_text = "DE | 1. Sept. | VorAnmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_text = "DE | 1. Sept. | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
     var i2r_font = "bolder"; //lighter
     var expl_text = "DE | 13. & 14. Oct. | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
