Update index.html to include Samuel

--- a/index.html
+++ b/index.html
@@ -509,6 +509,37 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+          <div class="team-member">
+            <a class="team-link" data-toggle="modal" href="#samuel">
+            <div class="team-hover">
+              <div class="team-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="mx-auto rounded-circle img-fluid" src="img/team/4.png" alt="">
+            </a>
+            <h4>MSc Samuel Aeschbach</h4>
+            <p class="text-muted">Ausbilder @ Basel</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://samuelaeschbach.com">
+                  <i class="fas fa-home"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/samuel-aeschbach/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/samuelae">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       <!---
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
