--- a/index.html
+++ b/index.html
@@ -879,6 +879,54 @@
   </div>
 
 
+  <!-- SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL  -->
+  <div class="team-modal modal fade" id="samuel" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/3.png" alt="">
+                <h4  style="padding:0px;margin:0px">Samuel Aeschbach, MSc</h4>
+                <p class="text-muted" style="margin-bottom:10px">Ausbilder @ Berlin</p>
+                <ul class="list-inline social-buttons">
+                  <li class="list-inline-item">
+                    <a href="https://samuelaeschbach.com/">
+                      <i class="fas fa-home fa-sm"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://www.linkedin.com/in/samuel-aeschbach/">
+                      <i class="fab fa-linkedin fa-sm"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/samuelae">
+                      <i class="fab fa-github fa-sm"></i>
+                    </a>
+                  </li>
+                </ul>
+                <p class="item-intro text-muted entry">Ich doktoriere an der Universität Basel und forsche zu semantischen Netzwerken am Max-Planck-Institut für Bildungsforschung in Berlin.</p>
+                <p class="head">Lieblings R-Paket</p>
+                <p class="text-muted entry"><a class="pckg" target="_blank" href="https://ggplot2.tidyverse.org/index.html">ggplot2</a> für systematische Graphiken.</p>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!--
   COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES
   COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES COURSES
