--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             <img class="mx-auto rounded-circle img-fluid" src="img/team/5.png" alt="">
             </a>
             <h4>MSc Samuel Aeschbach</h4>
-            <p class="text-muted">Ausbilder @ Basel</p>
+            <p class="text-muted">Ausbilder @ Berlin</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
                 <a href="https://samuelaeschbach.com">
@@ -893,7 +893,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <!-- Project Details Go Here -->
-                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/3.png" alt="">
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/5.png" alt="">
                 <h4  style="padding:0px;margin:0px">Samuel Aeschbach, MSc</h4>
                 <p class="text-muted" style="margin-bottom:10px">Ausbilder @ Berlin</p>
                 <ul class="list-inline social-buttons">
