Update en.html to include samuel

--- a/en.html
+++ b/en.html
@@ -488,6 +488,37 @@
           </div>
         </div>
       </div>
+      <div class="col-sm-4">
+          <div class="team-member">
+            <a class="team-link" data-toggle="modal" href="#samuel">
+            <div class="team-hover">
+              <div class="team-hover-content">
+                <i class="fas fa-plus fa-3x"></i>
+              </div>
+            </div>
+            <img class="mx-auto rounded-circle img-fluid" src="img/team/5.png" alt="">
+            </a>
+            <h4>MSc Samuel Aeschbach</h4>
+            <p class="text-muted">Instructor @ Berlin</p>
+            <ul class="list-inline social-buttons">
+              <li class="list-inline-item">
+                <a href="https://samuelaeschbach.com">
+                  <i class="fas fa-home"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://www.linkedin.com/in/samuel-aeschbach/">
+                  <i class="fab fa-linkedin-in"></i>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://github.com/samuelae">
+                  <i class="fab fa-github"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
       <!---
       <div class="row">
         <div class="col-lg-8 mx-auto text-center">
@@ -814,6 +845,54 @@
                 <p class="text-muted entry"><a class="pckg" target="_blank" href="https://www.tidyverse.org/">tidyverse</a> to make Data Science efficient.</p>
                 <p class="head">My own R packages</p>
                 <p class="text-muted pckg"><a class="pckg" target="_blank" href="http://cran.r-project.org/package=mousetrap">mousetrap</a> for analysing movement trajectories.</p>
+                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i>
+                  Close</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL SAMUEL  -->
+  <div class="team-modal modal fade" id="samuel" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="close-modal" data-dismiss="modal">
+          <div class="lr">
+            <div class="rl"></div>
+          </div>
+        </div>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8 mx-auto">
+              <div class="modal-body">
+                <!-- Project Details Go Here -->
+                <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/5.png" alt="">
+                <h4  style="padding:0px;margin:0px">Samuel Aeschbach, MSc</h4>
+                <p class="text-muted" style="margin-bottom:10px">Instructor @ Berlin</p>
+                <ul class="list-inline social-buttons">
+                  <li class="list-inline-item">
+                    <a href="https://samuelaeschbach.com/">
+                      <i class="fas fa-home fa-sm"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://www.linkedin.com/in/samuel-aeschbach/">
+                      <i class="fab fa-linkedin fa-sm"></i>
+                    </a>
+                  </li>
+                  <li class="list-inline-item">
+                    <a href="https://github.com/samuelae">
+                      <i class="fab fa-github fa-sm"></i>
+                    </a>
+                  </li>
+                </ul>
+                <p class="item-intro text-muted entry">I am a PhD student at University of Basel and work on semantic networks at the Max Planck Institute for Human Development in Berlin.</p>
+                <p class="head">Favorite R-package</p>
+                <p class="text-muted entry"><a class="pckg" target="_blank" href="https://ggplot2.tidyverse.org/index.html">ggplot2</a> for systematic plots.</p>
                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i>
                   Close</button>
