--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     var i2r_text = "DE | 1. Sept. | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
     var i2r_font = "bolder"; //lighter
-    var expl_text = "DE | 13. & 14. Oct. | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-webinar-272006#collapsible-heading-anmeldung"
-    var expl_font = "bolder";
+    var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Früjahr 2024."
+    var expl_font = "lighter";
     var stat_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Statistik mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' im Früjahr 2023."
     var stat_font = "bolder";
