--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
           </div>
         </div>
         
-        <!-- <div class="col-sm-4">
+        <div class="col-sm-4">
           <div class="team-member">
             <a class="team-link" data-toggle="modal" href="#markus">
             <div class="team-hover">
@@ -494,7 +494,7 @@
             </div>
             <img class="mx-auto rounded-circle img-fluid" src="img/team/2.png" alt="">
             </a>
-            <h4>MSc Markus Steiner</h4>
+            <h4>Dr. Markus Steiner</h4>
             <p class="text-muted">Ausbilder @ Basel</p>
             <ul class="list-inline social-buttons">
               <li class="list-inline-item">
@@ -514,7 +514,8 @@
               </li>
             </ul>
           </div>
-        </div> -->
+        </div> 
+        
         <div class="col-sm-4">
           <div class="team-member">
             <a class="team-link" data-toggle="modal" href="#michael">
@@ -585,7 +586,7 @@
 
   <!-- Contact --->
   <section class="page-section" id="contact">
-    <form action="https://formspree.io/baselrbootcamp@gmail.com" method="POST" id="Contact_form" name="Contact_form">
+    <form action="https://formspree.io/therbootcamp@gmail.com" method="POST" id="Contact_form" name="Contact_form">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
@@ -785,7 +786,7 @@
 
 
 
-  <!-- MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS
+  <!-- MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS MARKUS -->
   <div class="team-modal modal fade" id="markus" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -799,7 +800,7 @@
             <div class="col-lg-8 mx-auto">
               <div class="modal-body">
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/team/2.png" alt="">
-                <h4  style="padding:0px;margin:0px">MSc Markus Steiner</h4>
+                <h4  style="padding:0px;margin:0px">Dr. Markus Steiner</h4>
                 <p class="text-muted" style="margin-bottom:10px">Ausbilder @ Basel</p>
                 <ul class="list-inline social-buttons">
                   <li class="list-inline-item">
@@ -834,7 +835,7 @@
       </div>
     </div>
   </div>
-   -->
+  
 
   <!-- MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL MICHAEL -->
   <div class="team-modal modal fade" id="michael" tabindex="-1" role="dialog" aria-hidden="true">
