--- a/index.html
+++ b/index.html
@@ -586,12 +586,12 @@
 
   <!-- Contact --->
   <section class="page-section" id="contact">
-    <form action="https://formspree.io/therbootcamp@gmail.com" method="POST" id="Contact_form" name="Contact_form">
+    <form action="https://formspree.io/f/mvgkznap" method="POST" id="Contact_form" name="Contact_form">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Kontaktieren Sie uns!</h2>
-          <font style="top:30px;" class="checkbox">Ich möchte der mailing list beitreten! <input type="checkbox" name="mailing list"></font><br>
+          <font style="top:30px;" class="checkbox">Ich möchte der mailing list beitreten! <input type="checkbox" name="mailing_list"></font><br>
           <br><br>
         </div>
       </div>
@@ -602,7 +602,7 @@
             <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
-                  <input class="form-control"name="name" type="text" placeholder="Ihr Name *" required="required" data-validation-required-message="Bitte geben Sie Ihren Namen ein.">
+                  <input class="form-control" name="name" type="text" placeholder="Ihr Name *" required="required" data-validation-required-message="Bitte geben Sie Ihren Namen ein.">
                   <p class="help-block text-danger"></p>
                 </div>
                 <div class="form-group">
