--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     //var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Explorative Datenanalyse mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' voranmelden."
     //DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>
     //mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden.
-    var i2r_text = "DE | 9. Mai 2025 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-datenanalyse-mit-r-webinar-272005"
+    var i2r_text = "DE | 27. März 2026 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-datenanalyse-mit-r-webinar-300841"
     var i2r_font = "bolder"; //lighter
-    var i2r_no2_text = "DE | 26. Sep. 2025 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_no2_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/einfuehrung-in-die-datenanalyse-mit-r-webinar-300841"
-    var i2r_no2_font = "bolder"; //lighter
-    var expl_text = "DE | 6. & 7. Juni 2025 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_no2_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die Datenanalyse mit R' im Herbst 2026 voranmelden."
+    var i2r_no2_font = "lighter"; //lighter
+    var expl_text = "DE | 22. & 23. Mai 2026 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/daten-aufbereiten-analysieren-und-visualisieren-mit-r-webinar-272006"
     var expl_font = "bolder";
     var stat_text = "DE | 21. & 22. Nov. 2025 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
