Update course details and links in index.html

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_no2_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die Datenanalyse mit R' im Herbst 2026 voranmelden."
     var i2r_no2_font = "lighter"; //lighter
-    var expl_text = "DE | 22. & 23. Mai 2026 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/daten-aufbereiten-analysieren-und-visualisieren-mit-r-webinar-272006"
+    var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var expl_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Daten aufbereiten, analysieren und visualisieren mit R' voranmelden."
     var expl_font = "bolder";
-    var stat_text = "DE | 21. & 22. Nov. 2025 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189"
+    var stat_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var stat_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden."
     var stat_font = "bolder";
     var ml_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Maschinelles Lernen mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' in 2023."
