--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     var i2r_no2_font = "lighter"; //lighter
     var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Daten aufbereiten, analysieren und visualisieren mit R' voranmelden."
-    var expl_font = "bolder";
+    var expl_font = "lighter";
     var stat_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Einführung in die Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' voranmelden."
-    var stat_font = "bolder";
+    var stat_font = "lighter";
     var ml_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "mailto:baselrbootcamp@gmail.com?subject=Voranmeldung für Maschinelles Lernen mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' in 2023."
     var ml_font = "lighter";
